
 * if the dir attribute of a <fileset> point to a symbolic link and
   followsymlinks is set to false, the fileset will no longer be
   scanned and always seem empty.
   Bugzilla Report 45741.

 * the .NET tasks that have been deprecated since Ant 1.7.0 have been
   removed, please use the stand-alone Antlib you can find at
   http://ant.apache.org/antlibs/dotnet/index.html
   instead.

Fixed bugs:
-----------

 * <symlink> task couldn't overwrite existing symlinks that pointed to nonexistent files
   Bugzilla report 38199.

 * <symlink> task couldn't overwrite files that were in the way of the symlink.
   Bugzilla report 43426.
   
 * <symlink> task failonerror="false" does not stop build from failing when 'ln' 
   command returns non-zero. Bugzilla report 43624  

 * <touch> task couldn't differentiate between "no resources specified" and "no resources
   matched."  Bugzilla report 43799.

 * ManifestClassPath throws when a relative path would traverse the file system root. Bugzilla
   report 44499.

 * <globmapper> had an indexoutofbounds when the prefix and postfix overlapped. Bugzilla report
   44731.
   
 * <typedef> and <taskdef> failed to accept file names with #
   characters in them.
   Bugzilla report 45190

 * A deadlock could occur if a BuildListener tried to access an Ant property
   within messageLogged while a different thread also accessed one.
   Bugzilla report 45194

 * Handle null result of system getProperty() in CommandlineJava.
   Similar to Bugzilla report 42334.

 * Length task did not process nonexistent Resources even though these might
   conceivably still carry file length information.  Bugzilla report 45271.

 * <javac>'s includeJavaRuntime="false" should work for gcj now.  Note
   that you may need to set includeAntRuntime to false in order to
   have full control.
   Bugzilla Report 34638.

 * <sql> would fail if the executed statment didn't return a result
   set with some JDBC driver that dissalow Statement.getResultSet to