@@ -2,6 +2,7 @@ Amongst other, the following people contributed to ant:
 
 Adam Blinkinsop
 Adam Bryzak
+Adam Sotona
 Aleksandr Ishutin
 Alexey Panchenko
 Alexey Solofnenko
