@@ -39,6 +39,10 @@
     <last>Bryzak</last>
   </name>
   <name>
+    <first>Adam</first>
+    <last>Sotona</last>
+  </name>
+  <name>
     <first>Aleksandr</first>
     <last>Ishutin</last>
   </name>
